-> data_migration: script which will convert prod to the new database format - first pass, tested -> database-refresh and -setup fixes: somehow had \r\n and not just \n -> Clinical Trees are now defined per-program in search helpers -> Patients/Participants are now Cases everywhere? hopefully

--- a/templates/cohorts/cohort_list.html
+++ b/templates/cohorts/cohort_list.html
@@ -78,7 +78,7 @@
                             <th class="checkbox-col"><input type="checkbox" class="select-all" title="select-all"/></th>
                             <th class="name-col">Cohort Name</th>
                             <th class="sample-col"># Samples</th>
-                            <th># Patients</th>
+                            <th># Cases</th>
                             <th class="owner-col">Ownership</th>
                             <th>Shared With</th>
                             <th>Cohort ID</th>
@@ -139,7 +139,7 @@
                             <th class="checkbox-col"><input type="checkbox" class="select-all" title="select-all"/></th>
                             <th class="name-col">Cohort Name</th>
                             <th class="sample-col"># Samples</th>
-                            <th># Patients</th>
+                            <th># Cases</th>
                             <th class="date-col">Last Modified</th>
                         </tr></thead>
                         <tbody>
