--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -53,7 +53,7 @@
             </li>
             <li class="separator"></li>
             {% if cohort.perm.perm == 'OWNER' %}
-                <li class="menu-item"><button class="btn btn-info" id="add-filter-btn">Edit</button> </li>
+                <li class="menu-item"><button class="btn btn-info" id="edit-cohort-btn">Edit</button> </li>
             {% endif %}
             <li class="menu-item"><button class="show-flyout btn btn-info" title="Show Comments">Comments</button></li>
             <li class="menu-item"><a href="{% url 'clone_cohort' cohort.id %}" class="btn btn-info clone-cohort-btn" title="Duplicate this cohort">Duplicate</a></li>
@@ -76,7 +76,7 @@
         <ul id="edit-cohort-menu" style="display: none">
             {% if cohort.perm.perm == 'OWNER' %}
                 <li class="menu-item"><button class="btn btn-primary" data-toggle="modal" data-target="#apply-edits-modal">Save Changes</button></li>
-                <li class="menu-item"><button class="btn btn-link" id="cancel-add-filter-btn">Cancel</button></li>
+                <li class="menu-item"><button class="btn btn-link" id="cancel-edit-cohort-btn">Cancel</button></li>
             {% endif %}
         </ul>
     </div>
