--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -14,12 +14,29 @@
 
     .curr-filter-panel
         overflow: hidden
-        height: 200px
+        height: 95px
         .prog-filter-set
             height: 100%
             border-left: 2px solid $isb-dark
         :first-child
             border-left: none
+        .label
+            margin: 0
+
+    .details-panel
+        overflow: hidden
+        height: 110px
+
+    .cohort-info
+        .more-details, .less-details
+            width: 100%
+            height: 36px
+            position: relative
+            button
+                left: 50%
+                transform: translateX(-50%)
+                position: absolute
+                z-index: 20
 
     #one-cohort-type-per-create-warn
         margin: 0px 15px 15px 15px
