-> Limited size of filter display in cohort creation dialogue so it won't make the dialogue too big -> Parsets only drawn for extent cohorts for the moment -> show more/less for filters will dynamically size based on largest filter set, and disable if under a certain size

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -15,9 +15,11 @@
     .curr-filter-panel
         overflow: hidden
         height: 95px
+        padding-bottom: 5px
         .prog-filter-set
-            height: 100%
             border-left: 2px solid $isb-dark
+            h5
+                margin-top: 0
         :first-child
             border-left: none
         .label
@@ -235,6 +237,10 @@
     #create-cohort-form .form-control-static span
         display: inline-block
         max-width: 90%
+
+    #selected-filters
+        max-height: 300px
+        overflow: scroll
 
     #multi-categorical
         overflow-x: auto
