--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -224,7 +224,7 @@
             <div class="more-graphs"><button class="btn btn-link" role="button">Show More</button></div>
             <div class="less-graphs" style="display: none;"><button class="btn btn-link" role="button">Show Less</button></div>
         </div>
-
+        {% if cohort.id %}
         <div class="parallel-sets panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">Data File Availability</h4>
@@ -234,6 +234,7 @@
                 <div id="multi-categorical"></div>
             </div>
         </div>
+        {% endif %}
     </div>
 </div>
 <script type="text/javascript">
