--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -117,7 +117,7 @@
                         </div>
                         <div class="form-group">
                             <h5>Selected Filters:</h5>
-                            <p class="form-control-static"></p>
+                            <p id="selected-filters" class="form-control-static"></p>
                         </div>
                     </div>
                     <div class="modal-footer">
