-> Filter panel loads will no longer do a redundant call to gather metadata -> Filter panel initial loads will not cause re-counting of the entire cohort -> Added a program-specific detail panel to editing (so counts can be tracked)

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -240,7 +240,8 @@
 
     #selected-filters
         max-height: 300px
-        overflow: scroll
+        overflow-y: auto
+        overflow-x: hidden
 
     #multi-categorical
         overflow-x: auto
