-> A spinner and temporary loading panel will show while program data is being loaded for the first filter panel

--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -195,6 +195,15 @@
 
     <div class="row">
         <div class="tab-content data-tab-content">
+            <div class="tab-pane active data-tab" role="tabpanel">
+                <div id="placeholder" class="col-md-12 data-tab-content-panel">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="spinner"><i class="fa fa-spinner fa-spin"></i></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
