--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -1,5 +1,23 @@
 #cohort-details
 
+    #placeholder
+        .panel-body
+            height: 200px
+        .spinner
+            position: absolute
+            width: 100%
+            height: 100%
+            top: 0px
+            left: 0px
+            background: rgba(0,0,0,.5)
+            z-index: 10
+            i
+                position: absolute
+                left: 45%
+                top: 40%
+                margin: auto
+                font-size: 100px
+
     .cohort-selected-filters
         overflow: hidden
         .more-filters, .less-filters
