--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -35,7 +35,7 @@
         height: 95px
         padding-bottom: 5px
         .prog-filter-set
-            border-left: 2px solid $isb-dark
+            border-left: 2px solid $isb-primary
             h5
                 margin-top: 0
         :first-child
