-> Refined program loading spinner

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -2,7 +2,9 @@
 
     #placeholder
         .panel-body
-            height: 200px
+            height: 210px
+            position: relative
+            overflow: hidden
         .spinner
             position: absolute
             width: 100%
