--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -195,8 +195,8 @@
 
     <div class="row">
         <div class="tab-content data-tab-content">
-            <div class="tab-pane active data-tab" role="tabpanel">
-                <div id="placeholder" class="col-md-12 data-tab-content-panel">
+            <div id="placeholder" class="tab-pane active data-tab" role="tabpanel">
+                <div class="col-md-12 data-tab-content-panel">
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="spinner"><i class="fa fa-spinner fa-spin"></i></div>
