-> Program loading spinner added to cohort creation; will not inappropriately resize

--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -81,6 +81,15 @@
 
     <div class="row">
         <div class="tab-content data-tab-content">
+            <div id="placeholder" class="tab-pane active data-tab" role="tabpanel">
+                <div class="col-md-12 data-tab-content-panel spinner-panel">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="spinner"><i class="fa fa-spinner fa-spin"></i></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
