--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -196,7 +196,7 @@
     <div class="row">
         <div class="tab-content data-tab-content">
             <div id="placeholder" class="tab-pane active data-tab" role="tabpanel">
-                <div class="col-md-12 data-tab-content-panel">
+                <div class="col-md-12 data-tab-content-panel spinner-panel">
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="spinner"><i class="fa fa-spinner fa-spin"></i></div>
