--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="panel-body curr-filter-panel">
                     {% for prog, filters in cohort.get_current_filters.items %}
-                        <div class="col-sm-{{ cohort.get_programs|get_prog_col_size }} prog-filter-set">
+                        <div class="col-sm-{{ cohort.get_current_filters.keys|get_prog_col_size }} prog-filter-set">
                         <h5>{{ prog }}</h5>
                         {% for filter in filters %}
                             <span class="filter-label label label-default space-right-5">{{ filter.name|get_feat_displ_name }}: {{ filter.value|get_readable_name:filter.name }}</span>
