--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -120,3 +120,9 @@
 
   .alert-dismissable
     margin-top: 8px
+
+.workbook-build
+  width: 100px
+  margin-bottom: 15px
+  height: 28px
+  padding: 2px 5px
