--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -18,6 +18,15 @@
         <li><a href="{% url 'workbooks' %}">Saved Workbooks</a></li>
     </ol>
     <h1 class="page-header">{{ workbook.name }}</h1>
+    <label for="workbook-build">Build</label>
+    <select aria-label="Workbook Build" id="workbook-build" class="form-control workbook-build">
+        <option value="{% if not workbook.build %}legacy{% else %}{{ workbook.build }}{% endif %}" selected >{% if not workbook.build %}Legacy{% else %}{{ workbook.build }}{% endif %}</option>
+        {% for build in workbook.get_builds %}
+            {% if build != workbook.build %}
+                <option value="{{ build }}" {% if not workbook.build %}disabled title="Legacy workbooks cannot specify a build value."{% endif %}>{{ build }}</option>
+            {% endif %}
+        {% endfor %}
+    </select>
     <p>{{ workbook.description }}</p>
     <ul class="page-action-group" role="menubar">
         {% if workbook.owner.id == request.user.id %}
