- More Participant -> Case cleanup

--- a/templates/cohorts/user-data.html
+++ b/templates/cohorts/user-data.html
@@ -129,7 +129,7 @@
                         <span class="total-values" id="total-samples">{{ total_samples }}</span>
                     </div>
                     <div class="row col-md-12 space-bottom-10">
-                        <span class="detail-label">Total Number of Participants:</span>
+                        <span class="detail-label">Total Number of Cases:</span>
                         <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                         <span class="total-values" id="total-participants">{{ total_patients }}</span>
                     </div>
