--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -132,7 +132,7 @@
                         <span class="total-values" id="c-{{ cohort.id }}-data-total-samples">{{ total_samples }}</span>
                     </div>
                     <div class="row col-md-12 space-bottom-10">
-                        <span class="detail-label">Total Number of Participants:</span>
+                        <span class="detail-label">Total Number of Cases:</span>
                         <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                         <span class="total-values" id="c-{{ cohort.id }}-data-total-participants">{{ total_cases }}</span>
                     </div>
