-> Creation filters now break out by program -> Show more/less cohort details should properly resize

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -32,10 +32,10 @@
                 position: absolute
                 z-index: 20
 
-    .curr-filter-panel
+    .curr-filter-panel, .creation-filter-panel
         overflow: hidden
         height: 95px
-        padding-bottom: 5px
+        padding-bottom: 15px
         .prog-filter-set
             border-left: 2px solid $isb-primary
             h5
