--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -103,9 +103,9 @@
                     margin: 0
         >li.active>a
             color: darken($isb-warning, 20%) !important
-        &-data, &-ud-filters
+        &-ud-filters
             li
-                //width: (100% / 2)
+                width: 100%
     .filter-panel
         .heading-note
             font-style: italic
