--- a/templates/cohorts/user-data.html
+++ b/templates/cohorts/user-data.html
@@ -2,15 +2,16 @@
     <div id="user-data-filter-panel" class="col-lg-4 filter-panel" role="tabpanel" {% if cohort.id %}style="display:none;"{% endif %}>
         <div class="tabpanel" role="tabpanel">
             <ul class="nav nav-tabs nav-tabs-ud-filters" role="tablist">
-                <li role="presentation" class="active"><a href="#ud-prog-project-filters" role="tab" data-toggle="tab" title="User Data Programs & Studies">Programs & Studies</a></li>
+                <li role="presentation" class="active"><a href="#ud-prog-project-filters" role="tab" data-toggle="tab" title="User Data Programs & Projects">Programs & Projects</a></li>
                 {% if user_data.features %}<li role="presentation" class=""><a href="#ud-feature-filters" role="tab" data-toggle="tab" title="User Data Features">Features</a></li>
-                {% else %}<li role="presentation" class="disabled"><a href="" role="tab" data-toggle="tab" title="">&nbsp;</a></li>{% endif %}
+                {# {% else %}<li role="presentation" class="disabled"><a href="" role="tab" data-toggle="tab" title="">&nbsp;</a></li> #}
+                {% endif %}
             </ul>
             <div class="tab-content">
-                <!-- user data programs & studies filters tab -->
+                <!-- user data programs & projects filters tab -->
                 <div role="tabpanel" class="tab-pane active" id="ud-prog-project-filters">
                     <ul class="list-group" id="data-type-accordion" role="tablist" aria-multiselectable="true">
-                        {% if not user_data or metadata_counts.user_data_total <= 0 %}
+                        {% if not metadata_counts.user_data %}
                             <li class="list-group-item">
                                 <div id="user-data-alert" class="alert alert-warning alert-dismissable">
                                     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -18,7 +19,7 @@
                                 </div>
                             </li>
                         {% endif %}
-                        {% for attr in user_data %}
+                        {% for attr in attr_counts %}
                             <li class="list-group-item">
                                 <div class="list-group-item__heading" role="tab" id="heading-{{ attr.id }}">
                                     <a role="button" data-toggle="collapse" data-parent="#data-type-accordion" href="#collapse-{{ attr.id }}"
@@ -54,7 +55,7 @@
                             <li class="list-group-item">
                                 <div id="user-data-filter-alert" class="alert alert-warning alert-dismissable">
                                     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                    If a feature is not present across all active user-uploaded studies, it will not be available here for filtering.
+                                    If a feature is not present across all active user-uploaded projects, it will not be available here for filtering.
                                 </div>
                             </li>
                             {% for attr in user_data.features %}
@@ -91,7 +92,7 @@
         </div>
     </div>
     <div class="{% if cohort.id %}col-md-12{% else %}col-lg-8{% endif %} data-tab-content-panel">
-        <div class="selected-filters user-data-selected-filters panel panel-default" {% if cohort.id %}style="display: none;"{% endif %}>
+        <div class="selected-filters 0-data-selected-filters panel panel-default" {% if cohort.id %}style="display: none;"{% endif %}>
             <div class="panel-heading clearfix">
                 <h4 class="panel-title pull-left">{% if cohort.id %}New Filters{% else %}Selected Filters{% endif %}</h4>
                 <a class="pull-right clear-filters" role="button" id="user-data-clear-filters">Clear All</a>
@@ -183,12 +184,12 @@
                     <div class="row col-md-6">
                         <span class="detail-label">Total Number of Samples:</span>
                         <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                        <span class="total-values" id="user-data-total-samples">{% if user_data %}{{ metadata_counts.user_data_total  }}{% else %}NA{% endif %}</span>
+                        <span class="total-values" id="0-data-total-samples">{{ total_samples }}</span>
                     </div>
                     <div class="row col-md-6">
                         <span class="detail-label">Total Number of Cases:</span>
                         <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                        <span class="total-values" id="user-data-total-participants">{% if user_data %}{{ metadata_counts.user_data_participants  }}{% else %}NA{% endif %}</span>
+                        <span class="total-values" id="0-data-total-participants">{{ total_cases }}</span>
                     </div>
                 </div>
             </div>
@@ -196,12 +197,18 @@
 
         <div class="user-data-trees panel panel-default">
             <div class="panel-heading">
-                <h4 class="panel-title">Programs & Studies</h4>
+                <h4 class="panel-title">Programs & Projects</h4>
             </div>
             <div class="panel-body">
                 <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                <div id="user-data-tree-graph" class="tree-graph-clinical"></div>
+                <div id="tree-graph-clinical-0" class="tree-graph-clinical"></div>
             </div>
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    var total_samples = {{ total_samples|safe }};
+    var metadata_counts = {{ metadata_counts|tojson|safe }};
+    var metadata_filters = {{ metadata_filters|tojson|safe }};
+    var attr_counts = {{ attr_counts|tojson|safe }};
+</script>
