->'View Files' fixes: platforms are now build dependent -> Replaced some of the table columns which were no longer valid -> Fixed a bug in cohort creation

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -400,6 +400,9 @@
                 ul
                     list-style: none
                     padding-left: 10px
+        .platform-counts
+            input
+                margin-right: 5px
 
 
     .filelist-panel
@@ -408,8 +411,7 @@
 
         table
             table-layout: fixed
-            word-break: break-all
-            word-wrap: break-word
+            word-wrap: normal
             .col-barcode, .col-pipeline
                 width: 150px
             .col-datalevel
