--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -127,7 +127,7 @@
                                         </div>
                                         <div id="sel-gene" class="list-group-item__body" role="tabpanel" aria-labelledby="heading-sel-gene">
                                             <div id="tokenfield-holder">
-                                                <textarea name="genes-list" class="form-control tokenfield" id="paste-in-genes" placeholder="Enter a gene's name" required></textarea>
+                                                <textarea name="genes-list" class="form-control tokenfield paste-in-genes" id="{{ program.id }}-paste-in-genes" placeholder="Enter a gene's name" required></textarea>
                                             </div>
                                             <div class="tokenfield">
                                                 <p class="helper-text__invalid" style="display: none;"><i class="fa fa-exclamation-circle"></i> The following <span class="token invalid">items</span>were not recognized as gene identifiers. You may either correct or delete these items -- or use them as-is.</p>
