-> total file count is now cross-program -> all program file listings should now appear

--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -112,7 +112,9 @@
                         {% endfor %}
                         </div>
                     {% empty %}
-                        <p>No filters have been applied to this cohort.</p>
+                        <div class="col-sm-12 prog-filter-set">
+                            <p>No filters have been applied to this cohort.</p>
+                        </div>
                     {% endfor %}
                 </div>
                 <div class="more-filters"><button class="btn btn-link" role="button">Show More</button></div>
