--- a/templates/cohorts/user-data.html
+++ b/templates/cohorts/user-data.html
@@ -1,5 +1,5 @@
 <div id="0-data" class="tab-pane data-tab{% if cohort.id and user_data and metadata_counts.user_data_total > 0 %} active{% endif %}" role="tabpanel">
-    <div id="user-data-filter-panel" class="col-lg-4 filter-panel" role="tabpanel" {% if cohort.id %}style="display:none;"{% endif %}>
+    <div id="user-data-filter-panel" class="col-lg-4 filter-panel" role="tabpanel" {% if cohort.id %}style="display:none;"{% endif %} data-prog-id="0" data-prog-displ-name="User Data">
         <div class="tabpanel" role="tabpanel">
             <ul class="nav nav-tabs nav-tabs-ud-filters" role="tablist">
                 <li role="presentation" class="active"><a href="#ud-prog-project-filters" role="tab" data-toggle="tab" title="User Data Programs & Projects">Programs & Projects</a></li>
@@ -35,7 +35,7 @@
                                         {% for v in attr.values %}
                                             <li class="checkbox">
                                                 <label>
-                                                    <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}"
+                                                    <input type="checkbox" name="elements-selected" data-user-program-id="{{ v.program }}" data-value-name="{{ v.name }}"
                                                            data-value-id="{% if v.id %}{{ v.id }}{% elif v.name %}{{ v.name }}{% else %}{{ v.value }}{% endif %}"
                                                            data-value-displ-name="{% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %}">
                                                     {% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %} <span class="count">({{ v.count }})</span>
@@ -91,7 +91,7 @@
             </div>
         </div>
     </div>
-    <div class="{% if cohort.id %}col-md-12{% else %}col-lg-8{% endif %} data-tab-content-panel">
+    <div class="{% if cohort.id %}col-md-12{% else %}col-md-9{% endif %} data-tab-content-panel">
         <div class="selected-filters 0-data-selected-filters panel panel-default" {% if cohort.id %}style="display: none;"{% endif %}>
             <div class="panel-heading clearfix">
                 <h4 class="panel-title pull-left">{% if cohort.id %}New Filters{% else %}Selected Filters{% endif %}</h4>
