-> Added build to edit workbook model, made display fixed text -> Build now defaults more properly in the workbook view, and cannot be set to null for a new workbook

--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -126,3 +126,8 @@
   margin-bottom: 15px
   height: 28px
   padding: 2px 5px
+
+.workbook-build-display
+  font-size: 16px
+  span
+    font-weight: 600
