-> Molecular filtering enabled, panel will load only if a program ahs molecular data to filter, otherwise it will be disabled -> Bugfix for data migration, data availability table names were wrong -> Bugfix for cohort filter panel vs. program panel sizing

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -91,8 +91,11 @@
             border: none
             background-color: #fff
             text-align: center
-            width: (100% / 4)
             font-size: 12.7px
+            &.program-tab
+                width: (100% / 4)
+            &.filter-tab
+                width: (100% / 3)
             &:first-child a
                 border-top-left-radius: 3px
             &:last-child a
@@ -114,8 +117,6 @@
             float: right
             display: block
             width: 50%
-        #paste-in-genes-tokenfield
-            width: 100% !important
         .tabpanel
             border-top-left-radius: 3px
             border-top-right-radius: 3px
@@ -162,15 +163,20 @@
                     padding: 0px 15px 0px 15px
             .panel-collapse
                 max-height: 100px
-            #sel-gene
+            .sel-gene
                 max-height: 300px
-                .tokenfield.form-control
-                    max-height: 49px
+                .tokenfield
+                    &.form-control
+                        max-height: 49px
+                    span
+                        input
+                            width: 100% !important
                 >.tokenfield
                     display: none
+
             .alert
                 margin: 10px 0px 10px 0px
-        #molecular-accordion
+        .molecular-accordion
             .list-item__heading
                 padding: 10px 0px 10px 0px
             .list-item
