FIx for issue 1892

--- a/templates/projects/system_data_dict.html
+++ b/templates/projects/system_data_dict.html
@@ -12,7 +12,7 @@
     <div class="container">
         <ol class="breadcrumb">
             <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
-            <li><a href="{% url 'projects' %}">Saved Projects</a></li>
+            <li><a href="{% url 'programs' %}">Saved Programs</a></li>
         </ol>
         <h1 class="page-header">System Data Dictionary</h1>
     </div>
